@@ -1,3 +1,8 @@
+2002-07-30  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/focus.c (CMD_WarpToWindow):
+	fixed negative arguments for unmanaged windows
+
 2002-07-25  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/placement.c (PlaceWindow):
